Fix z-index from sidebar element

--- a/assets/stylesheets/sidebar_hide.css
+++ b/assets/stylesheets/sidebar_hide.css
@@ -34,7 +34,7 @@
 }
 
 #sidebar {
-  z-index:12;
+  z-index:0;
 }
 
 #sidebar.sidebar_hidden {
